# spider

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MUJOCO_LOG.TXT  README.md  asm_revised.md  dump_world_mocap_npz_to_json.py  paper.md  pipeline.md  requirements.txt  setup.py  visualize_watermelon_server_da3_viser.py
docs/: package.json
docs/guide/: installation.md
docs/workflows/: workflow-hdmi.md
examples/: README.md  run_mjwp.py  run_mjwp_2objs.py
examples/asm/: generate_scene_asm.sh  run_ik_asm.sh  run_mjwp_asm.sh
examples/asm_ourdata/: composite_milk_d435_foreground.sh  generate_scene_ourdata_milk_asm.sh  generate_scene_ourdata_milk_asm_NewCollision.sh  generate_scene_ourdata_milk_asm_PickSpoonBowlParams.sh  generate_scene_ourdata_milk_asm_URDFCollision.sh  generate_scene_ourdata_milk_asm_textured.sh  process_ourdata_milk.sh  process_ourdata_milk_PickSpoonBowlParams.sh  process_ourdata_milk_textured.sh  revised.md  run_ik_fast_ourdata_milk_asm.sh  run_ik_ourdata_milk_asm.sh  run_ik_ourdata_milk_asm_PickSpoonBowlParams.sh  run_ik_ourdata_milk_asm_URDFCollision.sh  run_ik_ourdata_milk_asm_textured.sh  run_mjwp_ourdata_milk_asm.sh  run_mjwp_ourdata_milk_asm_PickSpoonBowlParams.sh  run_mjwp_ourdata_milk_asm_URDFCollision.sh  run_mjwp_ourdata_milk_asm_textured.sh
examples/config/: default.yaml  mjwp.yaml
spider/: __init__.py  config.py  interp.py  io.py  math.py  mujoco_utils.py
spider/assets/robots/asm_description/: CMakeLists.txt  package.xml  readme.md
spider/assets/robots/asm_description/config/: asm_right.rviz
spider/assets/robots/asm_description/launch/: display.launch.py  gazebo.launch.py
spider/assets/robots/asm_description/meshes/arm/: base_link.STL  base_link2.STL  neck_1.STL  neck_2.STL  wrist.STL
spider/assets/robots/asm_description/scripts/: demo.py  demo1.py
spider/assets/robots/asm_description/src/: demo.cpp
spider/assets/robots/asm_description/urdf/: asm.urdf  asm_2.urdf  asm_3.urdf  asm_4.urdf  asm_4_complete.urdf  asm_5.urdf  asm_6.urdf  asm_7.urdf  asm_right.urdf
(+79 files in other folders)
